[project]
name = "superclaims"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.122.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "pymupdf>=1.26.6",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
]
